# ROS_MIRANA

./: .gitignore  readme.md
automap/: CMakeLists.txt  package.xml
automap/datastore/: id2label.csv  id2pos.csv
automap/launch/: alvar_track.launch  automap.launch  autonavigation.launch  exploration.launch  filterTest.launch  loomo_relay.launch  movebase.launch  rtabmap.launch
automap/launch/config/: costmap_common_params.yaml  loomo.rviz  planner_teb.yaml
automap/scripts/: depth_filter.py  label2goal.py  scan_filter.py
automap/src/: marker2Map.cpp
depthimage_to_laserscan/include/depthimage_to_laserscan/: DepthImageToLaserScan.h  DepthImageToLaserScanROS.h
depthimage_to_laserscan/src/: DepthImageToLaserScanROS.cpp
