<?xml version="1.0"?>
<package format="2">
  <name>automap</name>
  <version>0.0.2</version>
  <description>The automap package</description>

  <maintainer email="nico@student.uni-luebeck.de">nico</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rtabmap_ros</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>ar_track_alvar_msgs</exec_depend>

</package>
